# wgpu-string-fdm

./: .gitignore  Cargo.toml  Cosserat.ipynb  Pipfile  README.md  Simluations.ipynb  Simluations_backup.ipynb  Untitled.ipynb  Wittrick-Coil-Spring.ipynb  Wittrick-Coil-Spring_backup.ipynb  batch_runs.py  flake.nix  piano_string_sim.ipynb  pyproject.toml  summary.ipynb  todo.md
.github/workflows/: CI.yml
.ipynb_checkpoints/: Cosserat-checkpoint.ipynb  Simluations-checkpoint.ipynb  Wittrick-Coil-Spring-checkpoint.ipynb  Wittrick-Coil-Spring_backup-checkpoint.ipynb  piano_string_sim-checkpoint.ipynb  summary-checkpoint.ipynb  tests-checkpoint.ipynb
batches/: .env.example  config.py  post_process.py  run_batch.py  simulation_run.py  utils.py
src/: gpu_bindings.rs  lib.rs
src/shaders/: cosserat.wgsl  cosserat_improved.wgsl  euler.wgsl  shader.wgsl  testing_string_x.wgsl  wittrick.wgsl
