[package]
name = "py-wgpu-fdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_wgpu_fdm"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
bytemuck = { version = "1.16.1", features = ["derive"]}
cfg-if = "1"
encase = "0.9.0"
env_logger = "0.11.3"
flume = "0.11.0"
log = "0.4.21"
wgpu = "0.20.1"
winit = "0.30.2"
pollster = "0.3.0"

